@@ -1,0 +1,43 @@
+/* XPM */
+static char * icon_away_xpm[] = {
+"13 12 28 1",
+" 	c None",
+".	c #8B8B8B",
+"+	c #FFFF00",
+"@	c #999900",
+"#	c #7F7F7F",
+"$	c #0B483A",
+"%	c #006DFF",
+"&	c #093C30",
+"*	c #4C4C4C",
+"=	c #0D5645",
+"-	c #175B40",
+";	c #0D5041",
+">	c #0E5948",
+",	c #0E5747",
+"'	c #84B9FF",
+")	c #0C4D3E",
+"!	c #0D5444",
+"~	c #0B4639",
+"{	c #0B4437",
+"]	c #0C4F40",
+"^	c #0A3F33",
+"/	c #0B4A3C",
+"(	c #0C4B3D",
+"_	c #0B3C31",
+":	c #0E4337",
+"<	c #0C3F33",
+"[	c #09382D",
+"}	c #09382E",
+".++@+...+..# ",
+".+@@+$%+@+&#*",
+".++++=-+@@+#*",
+".;>,',,%++&#*",
+".),>%!')~'&#*",
+".{)!]])~~^&#*",
+".~'/+)('~%_#*",
+".^:+@+<[}}&#*",
+"##+@+#######*",
+" **+.###*****",
+"    .###*    ",
+"  .#######*  "};
