@@ -1,0 +1,96 @@
+/* XPM */
+static char * icon_na_xpm[] = {
+"15 15 78 1",
+" 	c None",
+".	c #F9F900",
+"+	c #F9E100",
+"@	c #897B00",
+"#	c #CFCF2C",
+"$	c #888C78",
+"%	c #7C7E7E",
+"&	c #B3B300",
+"*	c #96A911",
+"=	c #737E61",
+"-	c #535353",
+";	c #8A8F7A",
+">	c #86A821",
+",	c #86AB23",
+"'	c #AAC95C",
+")	c #377553",
+"!	c #1A5F48",
+"~	c #91BB62",
+"{	c #CCCC00",
+"]	c #A5B20C",
+"^	c #80885F",
+"/	c #77817F",
+"(	c #0C5041",
+"_	c #0E5747",
+":	c #2074B8",
+"<	c #14606F",
+"[	c #508EB2",
+"}	c #1B6169",
+"|	c #7BA158",
+"1	c #548068",
+"2	c #5A6A66",
+"3	c #77807E",
+"4	c #0B483A",
+"5	c #0C5141",
+"6	c #0B5455",
+"7	c #0B5047",
+"8	c #1C5B59",
+"9	c #0B4639",
+"0	c #124B43",
+"a	c #124641",
+"b	c #2A626A",
+"c	c #54898E",
+"d	c #A6BA13",
+"e	c #5F8827",
+"f	c #165247",
+"g	c #8CB4A9",
+"h	c #EEEE00",
+"i	c #EDED00",
+"j	c #676740",
+"k	c #797F7D",
+"l	c #3E6240",
+"m	c #98AB13",
+"n	c #C8C800",
+"o	c #CECE20",
+"p	c #3E5D49",
+"q	c #506837",
+"r	c #BBBB00",
+"s	c #BABA00",
+"t	c #EAEA00",
+"u	c #454545",
+"v	c #797951",
+"w	c #B7B714",
+"x	c #C7C72A",
+"y	c #8F8F71",
+"z	c #7E7E7E",
+"A	c #87876A",
+"B	c #A5A526",
+"C	c #595946",
+"D	c #767655",
+"E	c #818181",
+"F	c #737373",
+"G	c #383838",
+"H	c #6F6F6F",
+"I	c #787878",
+"J	c #7F7F7F",
+"K	c #7D7D7D",
+"L	c #717171",
+"M	c #525252",
+"               ",
+" .......+.+    ",
+" .@..@.+@+.    ",
+" .@@.@+@+@+    ",
+" .@.@@.@@@+    ",
+" .@.+@+@+@+#$% ",
+" ++++++++++&*=-",
+"    ;>,')!~{]^-",
+"    /(_:<[}|12-",
+"    34567890a2-",
+"    3bcdefghi.j",
+"    klmnopqrstj",
+"    uvwxyzABBBC",
+"       DEzFG   ",
+"      HIJzKLM  "};
